# one-capital-autoinvesting

./: .gitattributes  .gitignore  .walletStore  AutoBalancer.sol  L1XSwapper.sol  LICENSE  Portfolio.sol  PortfolioFactory.sol  README.md  Swap.sol  check-contract.js  check-sources.ps1  hardhat-network.json  hardhat.config.js  package-lock.json  package.json  register-contracts.bat  setup-random.ps1
.next/: trace
contracts/: AutoBalancer.sol  L1XSwapper.sol  MockDEXRouter.sol  MockToken.sol  Portfolio.sol  PortfolioFactory.sol  Swap.sol  XCDPCore.sol
frontend/: README.md  package-lock.json  package.json  setup.sh  tailwind.config.js  tsconfig.json
l1x-test/: Cargo.toml
l1x-test-project/: Cargo.toml
scripts/: check-network.js  check-sources.js  deploy-swap.js  deploy-xcdp.js  deploy.js  initialize-account.js  initiate-swap.js  register-contracts.js  save-addresses.js  send-message.js  test-autobalance.js  test-local.js  (+1 more)
xcdp-core/: Cargo.toml  README.md  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
xcdp-core/l1x-sdk/l1x-sdk/: .cargo-checksum.json  Cargo.toml
xcdp-core/l1x-sdk/l1x-sdk-macros/: .cargo-checksum.json  Cargo.toml
xcdp-core/l1x-sdk/l1x-sdk/src/: lib.rs
xcdp-core/l1x-sdk/l1x-sdk/src/types/: int.rs
xcdp-core/l1x-sdk/l1x-sys/: .cargo-checksum.json  Cargo.toml
xcdp-core/l1x-sdk/l1x-sys/src/: lib.rs
xcdp-core/l1x-sdk/macropol/: .cargo-checksum.json  Cargo.toml
xcdp-core/scripts/: compile.ts  deploy.ts
xcdp-core/src/: config.ts  lib.rs  main.rs  wallet.rs
xcdp-core/tests/: portfolio_test.rs
(+158 files in other folders)
